# sparkhub-VoCu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  partitions_table.csv  peru.yaml  sdkconfig
Program_output/: log_data.txt
app/: CMakeLists.txt
build_artifacts/: Readme.md
certs/: 08D1F99BCD30-full-chain.cert.pem  08D1F99BCD30.cert.pem  08D1F9E11B2C-full-chain.cert.pem  rootca.pem  (+17 more)
misc/pc_ble_client/: CMakeLists.txt  README.md  build_pc_client.sh
misc/pc_ble_client/src/: console_control.cpp  console_control.h  main.cpp
misc/pc_ble_client/src/common/: defines.h  misc.cpp  misc.h
misc/pc_ble_client/src/communication/: bleuart.cpp  bleuart.h
test/: CMakeLists.txt
test/mocks/: README.md  generate_mock.sh  project.yml  recreate_all_mocks.sh
test/mocks/copied_manually/cJSON/: README.md
test/mocks/generated_mocks/aws/ota-for-aws-iot-embedded-sdk/source/include/: mock_ota.c  mock_ota.h
test/mocks/generated_mocks/aws/ota-for-aws-iot-embedded-sdk/source/portable/os/: mock_ota_os_freertos.c  mock_ota_os_freertos.h
test/mocks/generated_mocks/bt/host/nimble/esp-hci/include/: mock_esp_nimble_hci.c  mock_esp_nimble_hci.h
test/mocks/generated_mocks/bt/host/nimble/nimble/nimble/host/include/host/: mock_ble_gap.c  mock_ble_gap.h  mock_ble_gatt.c  mock_ble_gatt.h  mock_ble_hs_id.c  mock_ble_hs_id.h  mock_ble_hs_mbuf.c  mock_ble_hs_mbuf.h  mock_ble_store.c  mock_ble_store.h
test/mocks/generated_mocks/bt/host/nimble/nimble/nimble/host/services/gap/include/services/gap/: mock_ble_svc_gap.c  mock_ble_svc_gap.h
test/mocks/generated_mocks/bt/host/nimble/nimble/porting/nimble/include/nimble/: mock_nimble_port.c  mock_nimble_port.h
test/mocks/generated_mocks/bt/host/nimble/nimble/porting/npl/freertos/include/nimble/: mock_nimble_port_freertos.c  mock_nimble_port_freertos.h
test/mocks/generated_mocks/crypto/: mock_iot_crypto.c  mock_iot_crypto.h
test/mocks/generated_mocks/driver/include/driver/: mock_gpio.c  mock_gpio.h  mock_ledc.c  mock_ledc.h
test/mocks/generated_mocks/esp_common/include/: mock_esp_err.c  mock_esp_err.h
test/mocks/generated_mocks/esp_event/include/: mock_esp_event.c  mock_esp_event.h
test/mocks/generated_mocks/esp_https_ota/include/: mock_esp_https_ota.c  mock_esp_https_ota.h
test/mocks/generated_mocks/esp_hw_support/include/: mock_esp_mac.c  mock_esp_mac.h
test/mocks/generated_mocks/esp_netif/include/: mock_esp_netif.c  mock_esp_netif.h
test/mocks/generated_mocks/esp_rom/include/esp32s3/rom/: mock_gpio.c  mock_gpio.h
test/mocks/generated_mocks/esp_system/include/: mock_esp_system.c  mock_esp_system.h
test/mocks/generated_mocks/esp_wifi/include/: mock_esp_wifi.c  mock_esp_wifi.h  mock_esp_wifi_default.c  mock_esp_wifi_default.h
test/mocks/generated_mocks/freertos/include/freertos/: mock_event_groups.c  mock_event_groups.h  mock_queue.c  mock_queue.h  mock_semphr.c  mock_semphr.h  mock_task.c  mock_task.h  mock_timers.c  mock_timers.h
test/mocks/generated_mocks/heap/include/: mock_esp_heap_caps.c  mock_esp_heap_caps.h
test/mocks/generated_mocks/log/include/: mock_esp_log.c  mock_esp_log.h
test/mocks/generated_mocks/lwip/lwip/src/include/lwip/apps/: mock_sntp.c  mock_sntp.h
test/mocks/generated_mocks/mqtt/esp-mqtt/include/: mock_mqtt_client.c  mock_mqtt_client.h
test/mocks/generated_mocks/network_transport/: mock_tls_freertos.c  mock_tls_freertos.h
test/mocks/generated_mocks/nvs_flash/include/: mock_nvs.c  mock_nvs.h  mock_nvs_flash.c  mock_nvs_flash.h
test/mocks/generated_mocks/ota/: mock_aws_esp_ota_ops.c  mock_aws_esp_ota_ops.h  mock_ota_pal.c  mock_ota_pal.h
test/mocks/generated_mocks/posix-compat/: mock_semaphore.c  mock_semaphore.h
test/mocks/generated_mocks/standard/coreMQTT/source/include/: mock_core_mqtt.c  mock_core_mqtt.h
test/mocks/headers_for_mocks/aws/ota-for-aws-iot-embedded-sdk/source/include/: ota_private.h
test/mocks/headers_for_mocks/bootloader_support/include/: bootloader_common.h  esp_app_format.h
test/mocks/headers_for_mocks/bt/host/nimble/nimble/nimble/host/include/host/: ble_hs_log.h  ble_uuid.h
test/mocks/headers_for_mocks/bt/host/nimble/nimble/porting/nimble/include/log/: log.h
test/mocks/headers_for_mocks/bt/host/nimble/nimble/porting/nimble/include/os/: queue.h
test/mocks/headers_for_mocks/bt/host/nimble/nimble/porting/npl/freertos/include/nimble/: nimble_npl_os.h
test/mocks/headers_for_mocks/driver/include/driver/: gpio.h
test/mocks/headers_for_mocks/esp_common/include/: esp_err.h
test/mocks/headers_for_mocks/esp_hw_support/include/soc/: spinlock.h
test/mocks/headers_for_mocks/esp_netif/include/: esp_netif_ip_addr.h
test/mocks/headers_for_mocks/esp_system/include/: esp_system.h
test/mocks/headers_for_mocks/esp_wifi/include/: esp_wifi_default.h
test/mocks/headers_for_mocks/freertos/include/freertos/: FreeRTOS.h  event_groups.h  portable.h
test/mocks/headers_for_mocks/freertos/port/xtensa/include/freertos/: portmacro.h
test/mocks/headers_for_mocks/heap/include/: esp_heap_caps.h
test/mocks/headers_for_mocks/lwip/include/apps/: esp_sntp.h
test/mocks/headers_for_mocks/network_transport/: tls_freertos.h
test/mocks/headers_for_mocks/newlib/platform_include/: esp_newlib.h
test/mocks/headers_for_mocks/soc/esp32s3/include/soc/: soc_caps.h
test/mocks/headers_for_mocks/soc/include/soc/: gpio_periph.h
test/mocks/headers_for_mocks/tcp_transport/include/: esp_transport_tcp.h
test/mocks/headers_for_mocks/xtensa/esp32s3/include/xtensa/config/: core.h
test/mocks/headers_for_mocks/xtensa/include/xtensa/: xtensa_context.h  xtruntime.h
test/mocks/misc_mocks/: external_variables.cpp  sdkconfig.h
test/src/: app_controller_test.cpp  cloud_controller_test.cpp  cobs_test.cpp  cobs_test.h  config_nvs_test.cpp  custom_types_test.cpp  example_test.cpp  json_parser_test.cpp  led_control_test.cpp  main.cpp  mqtt_client_controller_test.cpp  reset_button_handler_test.cpp  test_circular_buffer.cpp  test_utils.cpp  test_utils.h  wifi_controller_test.cpp
test/src/code_mocks/: app_controller_mock.h  config_nvs_mock.h  light_control_interface_mock.h
(+125 files in other folders)
